--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "doctrine/dbal": "2.5.1"
     },
     "autoload": {
         "classmap": [
@@ -53,4 +54,5 @@
         "sort-packages": true,
         "optimize-autoloader": true
     }
+   
 }
